--- a/.github/workflows/test-taxes.yml
+++ b/.github/workflows/test-taxes.yml
@@ -45,20 +45,20 @@ jobs:
     - name: Executar teste com valores padrão
       run: |
         echo "=== TESTE AUTOMÁTICO (R$ 100) ==="
-        node src/calculate.js --valor 100 --icms 17 --pis 15 --cofins 7.5
+        node src/index.js --valor 100 --icms 17 --pis 15 --cofins 7.5
         
         echo ""
         echo "=== VERIFICAÇÃO DOS CÁLCULOS ==="
         
         # Teste com valores conhecidos
-        node src/calculate.js --valor 100 --icms 10 --pis 1 --cofins 5
+        node src/index.js --valor 100 --icms 10 --pis 1 --cofins 5
         
         echo ""
         echo "=== TESTE COM VALORES PERSONALIZADOS (se fornecido) ==="
         
         # Teste com valores do workflow_dispatch (se existirem)
         if [ -n "${{ inputs.valor }}" ] && [ -n "${{ inputs.icms }}" ] && [ -n "${{ inputs.pis }}" ] && [ -n "${{ inputs.cofins }}" ]; then
-          node src/calculate.js \
+          node src/index.js \
             --valor ${{ inputs.valor }} \
             --icms ${{ inputs.icms }} \
             --pis ${{ inputs.pis }} \
